--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
-  margin: 1 rem;
+  margin: 1rem;
   font-family: Arial, Helvetica, sans-serif;
   color: #222222;
-  background-color: #e5fff2;
+  width: 100vw;
+  height: 100vh;
+  /* background-color: #e5fff2; */
 }
